Removida fecha de URL

--- a/_posts/2016-11-13-no-sql.md
+++ b/_posts/2016-11-13-no-sql.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Introducción a las Bases de datos No Transaccionales"
 date:   2016-11-13 00:53:49 -0300
-categories: apuntes, no sql
+categories: apuntes no-sql
 author: alf
 ---
 
