Mostrar solo las practicas. Los apuntes quedan ocultos

--- a/_posts/2016-11-13-no-sql.md
+++ b/_posts/2016-11-13-no-sql.md
@@ -4,6 +4,7 @@ title:  "Introducción a las Bases de datos No Transaccionales"
 date:   2016-11-13 00:53:49 -0300
 categories: apuntes no-sql
 author: alf
+type: draft
 ---
 
 ## Origen
